--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: a blog stack
 description:
 author: JamesXun
 language: zh-CN
-timezone: Asia/Beijing
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -69,5 +69,5 @@ theme: again
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/JamesXun/JamesXun.github.io
+  repo: git@github.com:JamesXun/JamesXun.github.io.git
   branch: master
