--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
-  "name": "OBD",
-  "version": "1.0.0",
-  "description": "OBD zepto echarts gulp",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "hexo-site",
+  "version": "0.0.0",
+  "private": true,
+  "hexo": {
+    "version": "3.2.2"
   },
-  "author": "JamesXun",
-  "license": "ISC",
-  "devDependencies": {
-    "gulp-babel": "^6.1.2",
-    "browser-sync": "^2.15.0",
-    "gulp": "^3.9.1",
-    "gulp-clean": "^0.3.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-imagemin": "^3.0.3",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-rev": "^7.1.2",
-    "gulp-rev-collector": "^1.0.5",
-    "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^2.0.0",
-    "run-sequence": "^1.2.2"
+  "dependencies": {
+    "hexo": "^3.2.0",
+    "hexo-deployer-git": "^0.2.0",
+    "hexo-generator-archive": "^0.1.4",
+    "hexo-generator-category": "^0.1.3",
+    "hexo-generator-index": "^0.2.0",
+    "hexo-generator-tag": "^0.2.0",
+    "hexo-renderer-ejs": "^0.2.0",
+    "hexo-renderer-marked": "^0.2.10",
+    "hexo-renderer-stylus": "^0.3.1",
+    "hexo-server": "^0.2.0"
   }
 }
