update for blog

--- a/_config.yml
+++ b/_config.yml
@@ -68,6 +68,4 @@ theme: again
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: git
-  repo: https://github.com/JamesXun/JamesXun.github.io
-  branch: master
+  type:
